--- a/jLanding.html
+++ b/jLanding.html
@@ -27,7 +27,7 @@
                 <button>サインアップ</button>
                 <select name="" id="select" onchange="window.location.href=this.value;">
                     <option value="jLanding.html" href="jLanding.html">Japan</option>
-                    <option value="landingPage.html" src="landingPage.html">English</option>
+                    <option value="landingPage.html" src="index.html">English</option>
                 </select>
             </div>
         </nav>
