--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="signUp.html">Sign Up</a>
 
                     <select name="" id="select" onchange="window.location.href=this.value;">
-                        <option value="" src="landingPage.html">English</option>
+                        <option value="" src="index.html">English</option>
                         <option value="jLanding.html" href="jLanding.html">Japan</option>
                     </select>
                 </div>
